[gd_scene load_steps=18 format=3 uid="uid://dopoh3gw6objn"]

[ext_resource type="Script" path="res://scenes/level.gd" id="1_c84lo"]
[ext_resource type="Texture2D" uid="uid://radxyc7tlbu4" path="res://images/bg.jpg" id="1_sjkot"]
[ext_resource type="PackedScene" uid="uid://bti0gpwlyo1jt" path="res://scenes/player.tscn" id="2_kexby"]
[ext_resource type="PackedScene" uid="uid://drvis87mbeq22" path="res://scenes/enemy_1_debug.tscn" id="3_wrubf"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/dialogueBox.gd" id="6_yd0ma"]
[ext_resource type="Resource" uid="uid://bdanno4wou6kg" path="res://level1dialogue.tres" id="7_wced4"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeWait.gd" id="8_pdv0r"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeGhost.gd" id="9_qciv6"]
[ext_resource type="Texture2D" uid="uid://cxpg3f0y7ddg5" path="res://images/Sprout Lands - Sprites - Basic pack/Tilesets/Grass.png" id="9_vmxrl"]
[ext_resource type="Texture2D" uid="uid://ddysyojx15s3s" path="res://images/Sprout Lands - Sprites - Basic pack/Tilesets/Hills.png" id="10_kq3vl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ewham"]
size = Vector2(112, 1287)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_of08e"]
size = Vector2(32.5, 792)

[sub_resource type="RichTextEffect" id="RichTextEffect_3g1q8"]
script = ExtResource("8_pdv0r")

[sub_resource type="RichTextEffect" id="RichTextEffect_gyxjj"]
script = ExtResource("9_qciv6")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_eo21h"]
texture = ExtResource("9_vmxrl")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
2:1/0 = 0
1:1/0 = 0
0:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
4:1/0 = 0
3:2/0 = 0
3:1/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
7:1/0 = 0
6:1/0 = 0
5:1/0 = 0
5:2/0 = 0
4:2/0 = 0
6:2/0 = 0
7:2/0 = 0
7:3/0 = 0
6:3/0 = 0
5:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p7tig"]
texture = ExtResource("10_kq3vl")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
2:1/0 = 0
1:1/0 = 0
0:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:0/0 = 0
3:1/0 = 0
3:2/0 = 0
3:3/0 = 0
2:3/0 = 0
1:3/0 = 0

[sub_resource type="TileSet" id="TileSet_ton4b"]
sources/1 = SubResource("TileSetAtlasSource_eo21h")
sources/2 = SubResource("TileSetAtlasSource_p7tig")

[node name="level" type="Node2D"]
script = ExtResource("1_c84lo")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(545, -216)
scale = Vector2(0.431475, 1.2213)
texture = ExtResource("1_sjkot")

[node name="enemy2" parent="." instance=ExtResource("3_wrubf")]
position = Vector2(673.34, 362.87)
scale = Vector2(0.0961, 0.0961)

[node name="enemy1" parent="." instance=ExtResource("3_wrubf")]
position = Vector2(514, 277)

[node name="player" parent="." instance=ExtResource("2_kexby")]
position = Vector2(0, 1)
player_speed = 10.0

[node name="batas_level" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="batas_level"]
collision_layer = 32
collision_mask = 27

[node name="CollisionShape2D2" type="CollisionShape2D" parent="batas_level/StaticBody2D"]
position = Vector2(558, 705)
rotation = 1.5708
shape = SubResource("RectangleShape2D_ewham")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="batas_level/StaticBody2D"]
position = Vector2(557, -111)
rotation = 1.5708
shape = SubResource("RectangleShape2D_ewham")

[node name="CollisionShape2D" type="CollisionShape2D" parent="batas_level/StaticBody2D"]
position = Vector2(-16.25, 337)
shape = SubResource("RectangleShape2D_of08e")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="batas_level/StaticBody2D"]
position = Vector2(894, 321)
shape = SubResource("RectangleShape2D_of08e")

[node name="Timer Spawn Enemies" type="Timer" parent="."]
wait_time = 9.483
autostart = true

[node name="Timer Projectiles Player" type="Timer" parent="."]
autostart = true

[node name="Enemy Vacuums Parent" type="Node2D" parent="."]

[node name="Player Projectiles Parent" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 64
collision_mask = 26

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
build_mode = 1
polygon = PackedVector2Array(-1015, 553, -1039, 1999, 2862, 1989, 2792, -1540, 2639, -1565, 2703, 1806, -840, 1825, -832, -2113, 3143, -1434, 3092, -1853, -946, -2278, -1105, -760)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="dialogue_box" type="Panel" parent="Control"]
visible = false
custom_minimum_size = Vector2(256, 128)
layout_mode = 0
offset_left = 84.0
offset_top = 424.0
offset_right = 1077.0
offset_bottom = 641.0
script = ExtResource("6_yd0ma")
dialogue_data = ExtResource("7_wced4")
start_id = "level1-1"
custom_effects = Array[RichTextEffect]([SubResource("RichTextEffect_3g1q8"), SubResource("RichTextEffect_gyxjj")])

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_ton4b")
format = 2

[connection signal="_player_targeting" from="player" to="." method="_on_player__player_targeting"]
[connection signal="timeout" from="Timer Spawn Enemies" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer Projectiles Player" to="player" method="_on_timer_projectiles_player_timeout"]
